# static_service

./: Cargo.toml  Rocket.toml
src/: main.rs
src/controllers/: index.rs  mod.rs
src/controllers/impls/: http_resp.rs  mod.rs
